OAKHILL/src/objects/Acount_To_Account_Affiliation__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>From_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Acount_To_Account_Affiliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Affiliation_Text__c</fullName>
        <label>Related Affiliation Text</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Affiliation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Affiliation</label>
        <referenceTo>Acount_To_Account_Affiliation__c</referenceTo>
        <relationshipName>Acount_To_Account_Affiliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>To_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Acount_To_Account_Affiliations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Account To Account Affiliation</label>
    <nameField>
        <displayFormat>AA-{00000}</displayFormat>
        <label>Acount To Account Affiliation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account To Account Affiliations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>